--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,6 +3,12 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+    <!--定义全局可以访问的参数-->
+    <context-param>
+        <param-name>password</param-name>
+        <param-value>fd12345</param-value>
+    </context-param>
+
     <servlet>
         <servlet-name>FdServlet</servlet-name>
         <servlet-class>com.fd.servlet.FdServlet</servlet-class>
