--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -33,4 +33,16 @@
         <servlet-name>FdServlet</servlet-name>
         <url-pattern>/servlet</url-pattern>
     </servlet-mapping>
+
+    <!--定义一个Filter ,配置两个节点-->
+
+    <filter>
+        <filter-name>encodingFilter</filter-name>
+        <filter-class>com.fd.filter.EncodingFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>encodingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 </web-app>
