--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,16 @@
     <!-- 项目的唯一ID，一个groupId下面可能多个项目，就是靠artifactId来区分的 -->
     <artifactId>FD1833JavaLesson</artifactId>
 
+    <!--  添加jar,一般在下面加入jar的坐标即可(GAV) -->
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
+
     <!-- 版本号 -->
     <version>1.0</version>
     <build>
