--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 
     <!-- 项目的唯一ID，一个groupId下面可能多个项目，就是靠artifactId来区分的 -->
     <artifactId>FD1833JavaLesson</artifactId>
+    <packaging>war</packaging>
 
     <!--  添加jar,一般在下面加入jar的坐标即可(GAV) -->
     <dependencies>
@@ -28,7 +29,6 @@
         </dependency>
 
     </dependencies>
-
     <!-- 版本号 -->
     <version>1.0</version>
     <build>
@@ -37,8 +37,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>6</source>
-                    <target>6</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
         </plugins>
