把maven的编译版本修改过为标准的1.8

--- a/pom.xml
+++ b/pom.xml
@@ -40,8 +40,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>6</source>
-                    <target>6</target>
+                    <!--把maven的编译版本修改过为标准的1.8-->
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
         </plugins>
