在WEB项目中引用DAO层的GAV

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.fd</groupId>
+            <artifactId>dao</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
 
     <!-- 版本号 -->
