创建一个Service层的Maven子工程

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>dao</module>
+        <module>service</module>
     </modules>
 
     <!--  添加jar,一般在下面加入jar的坐标即可(GAV) -->
