--- a/service/pom.xml
+++ b/service/pom.xml
@@ -11,5 +11,13 @@
 
     <artifactId>service</artifactId>
 
+    <dependencies>
+        <!--把DAO层的依赖放入Service层,减少父项目对DAO的依赖-->
+        <dependency>
+            <groupId>com.fd</groupId>
+            <artifactId>dao</artifactId>
+            <version>1.0</version>
+        </dependency>
+    </dependencies>
 
 </project>
