--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,11 @@
             <!--provided 只用测试,编译,打包时候可以忽略-->
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>com.fd</groupId>
+            <artifactId>service</artifactId>
+            <version>1.0</version>
+        </dependency>
 
     </dependencies>
 
@@ -48,6 +52,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
                 <configuration>
                     <!--把maven的编译版本修改过为标准的1.8-->
                     <source>1.8</source>
