--- a/web/pom.xml
+++ b/web/pom.xml
@@ -10,8 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>web</artifactId>
-    <packaging>war
-    </packaging>
+    <packaging>war</packaging>
 
 <dependencies>
     <dependency>
