--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,12 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>9.4.1.v20170120</version>
+            </plugin>
         </plugins>
     </build>
 </project>
